<resources>
    <string name="app_name">Robot Klepa</string>
    <string name="nameInputHint">Name of content</string>
    <string name="urlInputHint">URL to watch</string>
    <string name="addBtnText">Add content</string>
    <string name="clearBtnText">Clear content</string>
    <string name="randomBtnText">Choose content</string>
    <string name="pHolderNumber">n.</string>
    <string name="pHolderURL">Ссылка</string>
    <string name="pHolderName">Заглушка</string>
</resources>